--- a/contacts.html
+++ b/contacts.html
@@ -18,14 +18,18 @@
     <div class="progress-bar" id="progressBar"></div>
     <header class="header">
         <div class="container header__block">
+    
             <nav class="header__nav scrollto">
                 <ul class="header__list list-reset">
-                    <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
-                    <li class="header__item"><a href="about.html" class="header__link">About me</a></li>
-                    <li class="header__item"><a href="projects.html" class="header__link">Projects</a></li>
-                    <li class="header__item"><a href="news.html" class="header__link">News</a></li>
-                    <li class="header__item"><a href="error.html" class="header__link">Blog</a></li>
-                    <li class="header__item"><a href="#" class="header__link active">Contact</a></li>
+                    <li class="header__item"><a href="index.html" class="header__link" data-lang-key="home">Home</a></li>
+                    <li class="header__item"><a href="about.html" class="header__link" data-lang-key="about">About me</a>
+                    </li>
+                    <li class="header__item"><a href="projects.html" class="header__link"
+                            data-lang-key="projects">Projects</a></li>
+                    <li class="header__item"><a href="news.html" class="header__link" data-lang-key="news">News</a></li>
+                    <li class="header__item"><a href="error.html" class="header__link" data-lang-key="blog">Blog</a></li>
+                    <li class="header__item"><a href="#" class="header__link active"
+                            data-lang-key="contact">Contact</a></li>
                 </ul>
             </nav>
     
@@ -38,12 +42,14 @@
             </div>
             <nav class="menu">
                 <ul class="menu__list list-reset">
-                    <li class="menu__item"><a href="index.html" class="menu__link">Home</a></li>
-                    <li class="menu__item"><a href="about.html" class="menu__link">About me</a></li>
-                    <li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
-                    <li class="menu__item"><a href="news.html" class="menu__link">News</a></li>
-                    <li class="menu__item"><a href="error.html" class="menu__link">Blog</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link" data-lang-key="home">Home</a></li>
+                    <li class="menu__item"><a href="about.html" class="menu__link" data-lang-key="about">About me</a></li>
+                    <li class="menu__item"><a href="projects.html" class="menu__link" data-lang-key="projects">Projects</a>
+                    </li>
+                    <li class="menu__item"><a href="news.html" class="menu__link" data-lang-key="news">News</a></li>
+                    <li class="menu__item"><a href="error.html" class="menu__link" data-lang-key="blog">Blog</a></li>
+                    <li class="menu__item"><a href="contacts.html" class="menu__link" data-lang-key="contact">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -51,34 +57,28 @@
     <main>
         <section class="contacts" id="contacts">
             <div class="container">
-                <div class="about__page-block--title">
-                    <h1 class="about__page-title">Contact</h1>
-                </div>
-                <div class="contacts__block block">
+                <div class="contacts__block">
                     <div class="contacts__block-content">
-                        <h2 class="contacts__title">
-                            Get in Touch
-                        </h2>
-                        <p class="contacts__subtitle">
-                            If&nbsp;you are interested in&nbsp;my&nbsp;work or&nbsp;want to&nbsp;provide feedback about this
-                            website, I&nbsp;am open
-                            to&nbsp;exchanging ideas .
+                        <h2 class="contacts__title" data-lang-key="contactsTitle" id="contactsTitle">Get in Touch</h2>
+                        <p class="contacts__subtitle" data-lang-key="contactsSubtitle">
+                            If you are interested in my work or want to provide feedback about this website, I am open to
+                            exchanging ideas.
                         </p>
                     </div>
                     <form action="#" method="post" class="contacts__form">
                         <div class="form__group">
-                            <label class="form__label" for="name">Name</label>
+                            <label class="form__label" for="name" data-lang-key="nameLabel">Name</label>
                             <input class="form__input" type="text" id="name" name="name" required>
                         </div>
                         <div class="form__group">
-                            <label class="form__label" for="email">Email</label>
+                            <label class="form__label" for="email" data-lang-key="emailLabel">Email</label>
                             <input class="form__input" type="email" id="email" name="email" required>
                         </div>
                         <div class="form__group">
-                            <label class="form__label" for="message">Message</label>
+                            <label class="form__label" for="message" data-lang-key="messageLabel">Message</label>
                             <textarea class="form__text" name="message" id="message" rows="4" required></textarea>
                         </div>
-                        <button class="form__btn" type="submit">Send</button>
+                        <button class="form__btn" type="submit" data-lang-key="sendButton">Send</button>
                     </form>
                 </div>
             </div>
@@ -88,27 +88,18 @@
         <div class="container">
             <div class="footer__block block">
                 <div class="footer__content">
-                    <h2 class="footer__title">Alex.</h2>
-                    <p class="footer__subtitle">
-                        I&nbsp;am a&nbsp;web developer living in&nbsp;Moldova. I&nbsp;have a&nbsp;very deep passion for
-                        Front End Development <span>❤</span>
-                        This site is&nbsp;made with a&nbsp;lot of&nbsp;love and passion.
+                    <h2 class="footer__title" data-lang-key="footerTitle">Alex.</h2>
+                    <p class="footer__subtitle" data-lang-key="footerSubtitle">
+                        I am a web developer living in Moldova. I have a very deep passion for Front End Development ❤ This
+                        site is made with a lot of love and passion.
                     </p>
-                    <div class="footer__block-socials">
-                        <a href="https://www.instagram.com/" class="footer__link" target="_blank">
-                            <img src="img/instagram.svg" alt="Instagram">
-                        </a>
-                        <a href="https://github.com/SuhihAlex?tab=repositories" class="footer__link" target="_blank">
-                            <img src="img/github.svg" alt="GitHub">
-                        </a>
-                    </div>
                     <small>
-                        Portfolio v2.0
+                        <span data-lang-key="portfolioVersion">Portfolio v2.0</span>
                         © 2024 Alex
                     </small>
                     <div class="header__block-language">
                         <select class="header__language-select" id="langSelect" onchange="changeLanguage()">
-                            <option class="header__language-lang active" value="en">EN</option>
+                            <option class="header__language-lang" value="en">EN</option>
                             <option class="header__language-lang" value="ru">RU</option>
                             <option class="header__language-lang" value="ro">RO</option>
                         </select>
@@ -117,6 +108,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/language.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
