--- a/RU/about.html
+++ b/RU/about.html
@@ -66,7 +66,7 @@
         <section class="about__page">
             <div class="container">
                 <div class="about__page-block--title">
-                    <h1 class="about__page-title" data-lang-key="about">Обо мне</h1>
+                    <h1 class="about__page-title about__page-title--ru" data-lang-key="about">Обо мне</h1>
                 </div>
                 <div class="about__page-block--content block">
                     <div class="about__page-block--img">
