--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container hero__block">
                 <div class="hero-container hero__block block">
                     <p class="hero__descr" data-lang-key="heroDescription">Hey There I’m</p>
-                    <h1 class="hero__title hero__title-ro" data-lang-key="heroTitle" id="heroTitle">Alex</h1>
+                    <h1 class="hero__title" data-lang-key="heroTitle" id="heroTitle">Alex</h1>
                     <p class="hero__subtitle" data-lang-key="heroSubtitle">I'm currently learning FrontEnd development</p>
                     <div class="hero__block-link">
                         <a href="https://www.instagram.com/alexandr_suhih/" class="hero__link" target="_blank">
@@ -172,7 +172,7 @@
             <div class="container">
                 <div class="contacts__block">
                     <div class="contacts__block-content">
-                        <h2 class="contacts__title contacts__title-ro" data-lang-key="contactsTitle" id="contactsTitle">Get in Touch</h2>
+                        <h2 class="contacts__title" data-lang-key="contactsTitle" id="contactsTitle">Get in Touch</h2>
                         <p class="contacts__subtitle" data-lang-key="contactsSubtitle">
                             If you are interested in my work or want to provide feedback about this website, I am open to
                             exchanging ideas.
